--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <!--link rel="icon" type="image/svg+xml" href="" /-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9ZNK700QZ8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-9ZNK700QZ8');
+    </script>
     <title>Top Carcassonner</title>
   </head>
   <body>
